feat: remoção de importações inutilizadas e otimização de código